--- a/trunk/IFSP.ADS.SiPDV.View/Properties/Resources.resx
+++ b/trunk/IFSP.ADS.SiPDV.View/Properties/Resources.resx
@@ -214,4 +214,10 @@
   <data name="OperatorPasswordWarning" xml:space="preserve">
     <value>Confirme a senha corretamente.</value>
   </data>
+  <data name="OperatorLoginError" xml:space="preserve">
+    <value>Operador e/ou Senha incorretos.</value>
+  </data>
+  <data name="OperatorLoginWarning" xml:space="preserve">
+    <value>Informe o Operador e a Senha para fazer login.</value>
+  </data>
 </root>
