--- a/IFSP.ADS.SiPDV.View/Properties/Resources.resx
+++ b/IFSP.ADS.SiPDV.View/Properties/Resources.resx
@@ -247,4 +247,16 @@
   <data name="ProductNotExists" xml:space="preserve">
     <value>Este produto não existe. Confira o código de baras.</value>
   </data>
+  <data name="SiPDV" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SiPDV.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="S" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\S.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SaleSaveSuccess" xml:space="preserve">
+    <value>Venda realizada com sucesso!</value>
+  </data>
+  <data name="CloseProgramQuestion" xml:space="preserve">
+    <value>Deseja realmente fechar o SiPDV?</value>
+  </data>
 </root>
