--- a/trunk/IFSP.ADS.SiPDV.View/FormLogin.resx
+++ b/trunk/IFSP.ADS.SiPDV.View/FormLogin.resx
@@ -150,4 +150,99 @@
         UhN9M7WZG8i/RaW3IE/EzuiJUNHr/yz9n3GTVQeEt91DAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAAAIABoBAAAJgAAACAgAAAAACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAAEAE
+        AAAAAAAAAAAAAAAAAAAAAAAA////Af///wH///8B////AQZFABMASwAFBUYAGf///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEDRgATBUYAVwVGAHP///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEFRgA9BUYAYQVGAKUFRgCfBUYAgQZG
+        AJMFRgBXCkcAB////wH///8B////Af///wH///8B////Af///wEFRgCbBUcA7QVHAEEGRgBtBkUAKwZG
+        AFEFRgAtBUcA9wZGANsERgAv////Af///wH///8B////Af///wEGRQA7BkcA/wZHAP8FRgDPBUUAKwVG
+        AEUFRgB1AEgABQVGAOcGRwD/BkcA5wZHABX///8B////Af///wH///8BBUUAIwVGAPkGRwD/BUYArf//
+        /wEFRgBvBUYAdwVGAJ0GRwD/BkcA/wZHAP8GRgB5////Af///wH///8B////Af///wEFRgA5BkYAbwdF
+        ABH///8BBUYAdQZHAM8GRwD/BkcA/wZHAP8GRwD/BkYAof///wH///8B////Af///wH///8B////Af//
+        /wH///8BBUYAYQZHAPMGRwD/BkcA/wZHAP8GRwD/BkcA/wVGAGn///8B////Af///wH///8B////Af//
+        /wH///8BBUYAiQZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wVGAKUAVQAD////Af///wH///8B////Af//
+        /wH///8BBUUAQQZHAP8GRwD/BkcA/wZHAP8GRwD/BUcA+QVGAHUHQwAJBEYADf///wH///8B////Af//
+        /wH///8B////AQVGAHMGRwD/BkcA/wZHAP8GRwD/BkYA2QVGAH0ERwAlBUcA6wVHAPcERwBD////Af//
+        /wH///8B////Af///wEFRQA3BkcA/wZHAP8GRwD/BUYAtwVGAGMFRwB3BkYAewZHAP8GRwD/BUYAn///
+        /wH///8B////Af///wH///8B////AQVGAIcGRwD/BkcA/wdEABkFRQBvBUYAYwVGAFEGRwD7BkcA/wVG
+        AFn///8B////Af///wH///8B////Af///wH///8BBEYAUQVGAMMFRQCbBUcAkQVGAEkGRgCLBUYAdQVG
+        AF////8B////Af///wH///8B////Af///wH///8B////Af///wH///8BBEgADQVGAEUFRgBrBUYAe///
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8BB0YACQZH
+        AAv///8B////Af///wH///8B////AQAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA
+        //8AAP//AAD//wAA//8AAP//AAD//wAA//8oAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAA////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wEGRQBNAEsAEf//
+        /wEFRgBj////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQRF
+        AD8FRgCF////AQVHAJMERQA/////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8BAFUACQVGANX///8BBUcAXQZHAJv///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////AQBEAA8GSABRBUYA5QVHAKsFRgC1BkcA7QVHAIsGRwBvBkcASwpHABn///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////AQdHAEEFRgCxBkYAwQVGAGcFRgCHBkYAfwpKABkGRgDBBkYAeQVHAJMGRgDrBkcA/wVG
+        ANkFRwCBCkcAGf///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////AQBFAAsGRgCnBkcA/wVHALcASAAP////AQdDACMGRwDF////AQZHAG8GRgB7////AQBF
+        AAsGRwChBkcA/wZHAP8GRwD3BkYAewBVAAP///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wEAfwADBUYAuQZHAP8GRwD/BkcA/wVHANsKSgAZ////AQZHAMkLRQAXB0MAIwZG
+        AMf///8B////AQAzAAUFRwDhBkcA/wZHAP8GRwD/BUYAsQBIAAf///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQZFAFUGRwD/BkcA/wZHAP8GRwD/BkcA/wVGAIn///8BBkYAewVG
+        AGP///8BBkYA0QtCABf///8B////AQVGALEGRwD/BkcA/wZHAP8GRwD/BkcAof///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8BBkYAlQZHAP8GRwD/BkcA/wZHAP8GRwD/BUcAs///
+        /wEFRQAtBUYAsf///wEFRgCHBEcAZ////wEASAAPBkYA6wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcAT///
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEGRgB3BkcA/wZHAP8GRwD/BkcA/wZH
+        AP8FRgCR////Af///wEGRgDVAD8ACQRGADcGRgDBAFUABwVHALMGRwD/BkcA/wZHAP8GRwD/BkcA/wZH
+        AP8GRgDL////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQBDABMFRgDnBkcA/wZH
+        AP8GRwD/BkYA+QZEACn///8B////AQVHAJMGRQBJAH8AAwVGAOUFRgC/BkcA/wZHAP8GRwD/BkcA/wZH
+        AP8GRwD/BkcA/wZHAP8IRgAd////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQZH
+        ACcFRgC5BkYA8QZGAM0HRQBD////Af///wH///8BB0YARQVHAJMGRwBPBkcA8wZHAP8GRwD/BkcA/wZH
+        AP8GRwD/BkcA/wZHAP8GRwD/BkcA/wdHAEX///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEATgANBkYA7wZHAP8GRwD/BkcA/wZH
+        AP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/B0UAQ////wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8BBkYAKQZHAM8GRwD/BkcA/wZH
+        AP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAPsARgAT////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQVGAGMGRgD3BkcA/wZH
+        AP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcAl////wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQB/AAMFRgCRBkcA/wZH
+        AP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZGAMcAVQAJ////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8BBUcAjwZH
+        AP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8FRwC9AEQAD///
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQdF
+        AEcGRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BUYAjQAz
+        AAX///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8BBUYAuwZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BUcA6QZF
+        AEn///8B////AQhGAB0FSAAxADMABf///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wEGRgDrBkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZH
+        AO0ASAAV////AQBVAAkFRwCtBkcA/wZHAP8FRwDdBUkALf///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQVHAOEGRwD/BkcA/wZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZG
+        APkGRgBxBUYA3wtCABf///8BBUcAjQZHAP8GRwD/BkcA/wZHAP8FRwDbAD8ABf///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8BBkYAowZHAP8GRwD/BkcA/wZHAP8GRwD/BkcA/wZH
+        AP8FRwDjBkYAqf///wEFRwCTBUcAXf///wEGRgDrBkcA/wZHAP8GRwD/BkcA/wZHAP8ERwA9////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEERAA1BkcA/wZHAP8GRwD/BkcA/wZH
+        AP8GRwD/BUYA3wpHABkFRwDbAD8ABQdHAEUGRwCp////AQZGAP0GRwD/BkcA/wZHAP8GRwD/BkcA/wdG
+        AEX///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wEFRwCJBkcA/wZH
+        AP8GRwD/BkcA/wZHAP8GRQBJ////AQZGAKMERQA/ADMABQVHAOEAVQAHBkcAxQZHAP8GRwD/BkcA/wZH
+        AP8GRwDzAEgAD////wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQB/
+        AAMFRgCRBkcA/wZHAP8GRwD/BkcA/wtCABf///8BBkUAVQVGAIn///8BBkcAqQdFAEcFSAAvBkcA7wZH
+        AP8GRwD/BkcA/wVGAF////8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wEFRwBXBUYA5QZHAP8GRwD/BkYAlQA/AAUASAAPBkcAz////wEFRwBZBkcAmf//
+        /wEFRwArBUcA3QZHAPcFRgBb////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wEASAAHBUcAXQVGALUGRgD1BUYA4QVHAIcFRwDdBUcAZQVG
+        AGUGRwDtBkYAqQZHAJsFQwAxBUkALf///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQA/AAUFSQAtBkUAVQZG
+        AKsFRwCvBUYAXwVHAN8GRwBP////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8BAEwAFQZHAJ////8BBkcASwZGAHP///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8BB0YAJf///wH///8BBkcAJ////wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</value>
+  </data>
 </root>
